@@ -1,5 +1,8 @@
 2008-05-15  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-internal.lisp (show-child): Always display frame info
+	even if the frame is hidden.
+
 	* src/xlib-util.lisp (resize-window): Use a better algorithme to
 	resize windows.
 
